--- a/public/css/web/user/password.css
+++ b/public/css/web/user/password.css
@@ -116,7 +116,7 @@ form input {
 }
 
 form .am-input-group-label:last-child {
-    width: 145px;
+    width: 142px;
     height: 50px;
     border: 1px solid #ccc;
     margin-top: -35px;
@@ -134,6 +134,12 @@ form .am-input-group-label:last-child {
 
 .div-input-inline {
     display: inline;
+
+    padding-left: 5px;
+    font-size:18px;
+    font-family:MicrosoftYaHei;
+    color:rgba(51,51,51,1);
+    line-height:31px;
 }
 
 #relogin-clock {
