--- a/public/web/css/business.css
+++ b/public/web/css/business.css
@@ -1,11 +1,15 @@
-/*去掉a标签默认样式*/
-a:link,a:visited{color:white;text-decoration:none;}
-a:hover{color:white;}
+/*a标签样式*/
+.click_open:link,.click_open:visited{
+    color:#E8E8E8;text-decoration:none;
+}
+.click_open:hover{
+    color:#E8E8E8;
+}
 .banner_bag{
     background-image:url("../images/bjt.png");
     width: 100%;
     height: 610px;
-position: relative;
+    position: relative;
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
