--- a/public/web/css/index.css
+++ b/public/web/css/index.css
@@ -1,21 +1,28 @@
+/*a标签样式*/
+.click_open:link,.click_open:visited{
+     color:#E8E8E8;text-decoration:none;
+ }
+.click_open:hover{
+    color:#E8E8E8;
+}
+
 body{
     background: #fff;
 }
 .row{
-    /*border: none;*/
+    border: none;
 }
 
 .banner_bag{
     background-image:url("../images/bjt.png");
     width: 100%;
     height: 610px;
-position: relative;
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
 }
 .open_btn{
-    width: 180px;
+    width: 11%;
     heigth:48px;
     border:3px solid #E0AB4A ;
     font-size: 34px;
@@ -23,8 +30,11 @@ position: relative;
     font-weight: bold;
     text-align: center;
     position: absolute;
-    top: 378px;
+    top: 428px;
     left: 47%;
+}
+.open_btn:hover{
+    cursor: pointer;
 }
 /*产品精选*/
 .welcome{
@@ -32,18 +42,18 @@ position: relative;
     font-family:MicrosoftYaHei;
     color:rgba(51,51,51,1);
     margin-left: 44%;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 .title_pro{
-    width: 266px;
+    width: 230px;
     height: 66px;
     line-height: 52px;
     text-align: center;
-    font-size:42px;
+    font-size:38px;
     font-family:MicrosoftYaHei-Bold;
     color:rgba(51,51,51,1);
     border: 6px solid #333;
-    margin-left: 41%;
+    margin-left: 43.5%;
 }
 .pyt{
     font-size:24px;
@@ -54,49 +64,77 @@ position: relative;
 
 /*背景图*/
 .sea_back_img{
-    margin-top: 140px;
-    width: 970px;
+    width: 90%;
     height: 502px;
+    margin-left:5%;
     background-image: url("../images/e7610562388bcb0033357f07544c2c7d8e7e263f86a93-2WQmVt_fw658拷贝2@2x.png");
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
-    position: relative;
+    position: absolute;
+    top: 290px;
+    z-index: 888;
 }
-.sea_back_img .text_box{
-    width: 420px;
+.sea_back_img .text_box,.sea_back_img .text_box_2,.sea_back_img .text_box_3,.sea_back_img .text_box_4,.sea_back_img .text_box_5{
+    width: 30%;
     height: 570px;
     background: #fff;
     border: 1px solid #B17D1D;
     position: absolute;
     bottom: 40px;
+
+}
+.sea_back_img .text_box_a{
+    width:44%;
+}
+.sea_back_img .text_box{
+    left: 5%;
+}
+.sea_back_img .text_box_2{
+    right:5%;
+}
+.sea_back_img .text_box_3{
+    left:3%;
+}
+.sea_back_img .text_box_4{
+    right:35%;
+}
+.sea_back_img .text_box_5{
+    right:3%;
 }
 .time_limit{
     font-size:42px;
     font-family:MicrosoftYaHei-Bold;
     color:rgba(224,171,74,1);
-    margin-left: 34px;
+    margin-left: 64px;
     margin-top: 20px;
 }
 .time_limit_eng,.first,.pledge,.full_goods,.guarantee{
     font-size:26px;
     font-family:MicrosoftYaHeiLight;
     color:rgba(51,51,51,1);
-    margin-left: 34px;
+    margin-left: 64px;
 }
 .first,.pledge{
-    font-size:36px;
+    font-size:26px;
     font-family:MicrosoftYaHei-Bold;
     margin-top: 30px;
 }
 .pledge{
-    margin-top: -8px;
+    margin-top: 6px;
+    margin-bottom: 6px;
 }
 .full_goods,.guarantee{
-    font-size:30px;
+    font-size:26px;
+    color:#999;
+    margin-top: 70px;
+}
+.guarantee{
+    margin-top: 10px;
 }
 .click_query{
-    margin-left: 34px;
+    margin-top: 60px;
+    margin-left: 64px;
     width: 120px;
     height: 40px;
     color: #E8E8E8;
@@ -104,8 +142,123 @@ position: relative;
     line-height: 38px;
     text-align: center;
     background: #E0AB4A;
-    box-shadow:#191919 ;
-
+    box-shadow: 1px 1px 5px #191919;
+}
+/*鼠标形状*/
+.click_query:hover{
+    cursor: pointer;
+}
+/*模糊背景图*/
+.col-12_bg,.col-12_bgr{
+    position: relative;
+    width:100%;
+    height:158px;
+    top:30px;
+}
+.col-12_bgr{
+    top:680px;
+}
+.back_image{
+    width: 100%;
+    height:300px;
+    position: absolute;
+    top:482px;
+    background-image: url("../images/bejt@2x.png");
+    background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    -webkit-background-size: 100% 100%;
+}
+.coulmn{
+    height: 498px;
+    background-image: url("../images/cda2413f3fac9467f15a7923c62344067eec91703609f-PkLM8p_fw658@2x.png");
+}
+/*产品矩阵*/
+.cpjz{
+    position: absolute;
+    top:2300px;
+}
+.full_goods_top{
+    margin-top: 108px;
+}
+.click_query_top{
+    margin-top: 116px;
+}
+.two_box_square{
+    width: 74%;
+    height: 820px;
+    margin-left: 13%;
+    margin-top: 20px;
+    background-image: url("../images/cpjx.png");
+    background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    -webkit-background-size: 100% 100%;
 }
 
 
+/*解决方案*/
+.jjfa_box{
+    margin-top:2020px;
+    width: 100%;
+}
+.solve{
+    width:40%;
+    height: 768px;
+    border: 1px solid  #B17D1D ;
+    margin-top: 20px;
+    display: inline-block;
+    float: left;
+    margin-bottom: 90px;
+    margin-left:114px;
+    padding:auto;
+}
+.xcx_logo{
+    margin-top:50px;
+    margin-left:24%;
+}
+.xcx_logo img{
+    width:64%;
+}
+.xcx_text{
+    font-size:36px;
+    font-family:MicrosoftYaHei-Bold;
+    color:rgba(224,171,74,1);
+    margin-left: 32%;
+    margin-top:30px;
+}
+.guide,.order,.short_time{
+    font-size:22px;
+    width:60%;
+    font-family:MicrosoftYaHeiLight;
+    color: #333;
+    margin-left: 20%;
+    margin-top:10px;
+}
+.left_45{
+    margin-left:27%;
+}
+.xiaozhushou{
+    color:#4AB0E0 ;
+    margin-left:40%;
+}
+/*.jjfa{*/
+/*margin-left: 43.5%;*/
+/*}*/
+.title_box{
+    width:20%;
+}
+/*页脚*/
+.pyt_footer{
+    border: none;
+}
+.pyt_footer li{
+    margin-top: 10px;
+    font-size: 18px;
+    color: #040000;
+    width: 140px;
+    border-right: 2px solid #040000;
+    padding: 0px 4px 0px;
+}
+.pyt_remark{
+    font-size: 18px;
+    color: #040000;
+}
