--- a/public/web/css/business.css
+++ b/public/web/css/business.css
@@ -5,26 +5,39 @@
 .click_open:hover{
     color:#E8E8E8;
 }
+
+
+
+
+body{
+    background: #fff;
+}
+.row{
+    border: none;
+}
+
 .banner_bag{
     background-image:url("../images/bjt.png");
     width: 100%;
     height: 610px;
-    position: relative;
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
 }
 .open_btn{
-    width: 180px;
+    width: 10%;
     heigth:48px;
     border:3px solid #E0AB4A ;
-    font-size: 34px;
+    font-size: 30px;
     color: #fff;
     font-weight: bold;
     text-align: center;
     position: absolute;
-    top: 378px;
-    left: 47%;
+    top: 534px;
+    left: 49%;
+}
+.open_btn:hover{
+    cursor: pointer;
 }
 
 /*中心内容文字*/
@@ -91,16 +104,20 @@
     font-size: 26px;
     font-family:MicrosoftYaHei;
     margin-left: 20%;
+    margin-top: 10px;
 }
 #footer_join .footer_logo{
     margin-left: 21%;
+    margin-top: 10px;
 }
 #footer_join .relation,#footer_join .advantage{
     font-size: 18px;
     margin-left: 9%;
+    margin-top: 10px;
 }
 #footer_join .advantage{
     margin-left: 11%;
+    margin-top: 10px;
 }
 #footer_join .register{
     width:158px;
@@ -108,6 +125,7 @@
     border: none;
     margin-bottom: 20px;
     margin-left: 18%;
+    margin-top: 12px;
     background:rgba(224,171,74,1);
     border-radius: 10px ;
     font-size: 28px;
@@ -139,4 +157,7 @@ body{
 }
 .row{
     border: none;
+}
+.pyt_remark{
+    padding-left: 54px;
 }
