--- a/public/web/css/index.css
+++ b/public/web/css/index.css
@@ -48,6 +48,9 @@ body{
     margin-left: 44%;
     margin-top: 20px;
 }
+.welcome_a{
+    margin-left: 35.5%;
+}
 .title_pro{
     width: 230px;
     height: 66px;
@@ -59,18 +62,23 @@ body{
     border: 6px solid #333;
     margin-left: 43.5%;
 }
+.title_pro_a{
+    margin-left: 34.5%;
+}
 .pyt{
     font-size:24px;
     font-family:MicrosoftYaHei;
     color:rgba(51,51,51,1);
     margin-left: 43.5%;
 }
-
+.pyt_a{
+    margin-left: 35.5%;
+}
 /*背景图*/
 .sea_back_img{
-    width: 90%;
+    width: 60%;
     height: 502px;
-    margin-left:5%;
+    margin-left:20%;
     background-image: url("../images/e7610562388bcb0033357f07544c2c7d8e7e263f86a93-2WQmVt_fw658拷贝2@2x.png");
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
@@ -78,6 +86,10 @@ body{
     position: absolute;
     top: 290px;
     z-index: 888;
+}
+.coulmn{
+    width: 80%;
+    margin-left: 10%;
 }
 .sea_back_img .text_box,.sea_back_img .text_box_2,.sea_back_img .text_box_3,.sea_back_img .text_box_4,.sea_back_img .text_box_5{
     width: 30%;
@@ -167,10 +179,17 @@ body{
     height:300px;
     position: absolute;
     top:482px;
+
     background-image: url("../images/bejt@2x.png");
+
     background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
+}
+.background_color{
+    width: 100%;
+    height: 300px;
+    background-color: rgba(0,0,0,.7);
 }
 .coulmn{
     height: 498px;
@@ -188,9 +207,9 @@ body{
     margin-top: 116px;
 }
 .two_box_square{
-    width: 74%;
+    width: 1100px;
     height: 820px;
-    margin-left: 13%;
+    margin-left: 18%;
     margin-top: 20px;
     background-image: url("../images/cpjx.png");
     background-size: 100% 100%;
@@ -203,16 +222,17 @@ body{
 .jjfa_box{
     margin-top:2020px;
     width: 100%;
+    padding-left: 16%;
 }
 .solve{
-    width:40%;
+    width:35%;
     height: 768px;
     border: 1px solid  #B17D1D ;
     margin-top: 20px;
     display: inline-block;
     float: left;
     margin-bottom: 90px;
-    margin-left:114px;
+    margin-left:70px;
     padding:auto;
 }
 .xcx_logo{
