淘宝授权登录,生成推荐链接

--- a/public/web/css/detail.css
+++ b/public/web/css/detail.css
@@ -1,3 +1,11 @@
+.click_open:link,.click_open:visited{
+    color:#333;text-decoration:none;
+}
+.click_open:hover{
+    color:#333;
+}
+
+
 .tab_nav{
     background: transparent;
     border: none;
