--- a/public/web/css/business.css
+++ b/public/web/css/business.css
@@ -7,8 +7,16 @@
 }
 
 
+.search_nav{
+    min-height: 90px;
+    padding-top: 30px;
+    padding-bottom: 40px;
+    background: #fff;
+}
 
-
+.navbar-form .form-control{
+    padding-left: 80px;
+}
 body{
     background: #fff;
 }
@@ -25,7 +33,7 @@ body{
     -webkit-background-size: 100% 100%;
 }
 .open_btn{
-    width: 10%;
+    width: 9%;
     heigth:48px;
     border:3px solid #E0AB4A ;
     font-size: 30px;
@@ -33,13 +41,43 @@ body{
     font-weight: bold;
     text-align: center;
     position: absolute;
-    top: 534px;
+    top: 570px;
     left: 49%;
 }
 .open_btn:hover{
     cursor: pointer;
 }
+#bs-example-navbar-collapse-1{
+    width: 1100px;
+}
+.navbar-collapse{
+    padding-left:0px;
+    padding-right:0px;
+}
+.navbar-nav .pyt_searchAll{
+    margin-left: -99px;
+    border-right: 1px solid #ddd;
+}
 
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color: #ddd;
+}
+input::-webkit-input-placeholder{
+    color: #ddd;
+}
+
+input:-ms-input-placeholder{
+    color: #ddd;
+}
+.navbar-left{
+    position: absolute;
+    left: 100px;
+    width: 750px;
+}
+.btn{
+    top: 18px;
+    right: -82px;
+}
 /*中心内容文字*/
 #line{
     width: 100%;
@@ -93,7 +131,7 @@ body{
     color: #fff;
 }
 #footer_join{
-    margin-left: 30%;
+    margin-left: 34%;
 }
 #footer_join .family{
     font-size:34px ;
@@ -108,16 +146,15 @@ body{
 }
 #footer_join .footer_logo{
     margin-left: 21%;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #footer_join .relation,#footer_join .advantage{
     font-size: 18px;
     margin-left: 9%;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #footer_join .advantage{
     margin-left: 11%;
-    margin-top: 10px;
 }
 #footer_join .register{
     width:158px;
@@ -138,13 +175,19 @@ body{
     margin-left: 6%;
     padding-left: 0px;
 }
+input{ outline:medium;}
 .pyt_footer li{
     margin-bottom: 0px;
-    margin-top:6px;
-    /*padding: 0px 6px 0px 0px ;*/
+    margin-top:10px;
     margin-left: -19px;
     width: 96px;
     padding-left: 24px;
+}
+.footer_line{
+    margin-top: 16px;
+}
+.pyt_remark{
+    margin-top: 2px;
 }
 .pyt_footer li:nth-of-type(1){
     padding-left: 8px;
