--- a/public/web/css/detail.css
+++ b/public/web/css/detail.css
@@ -18,15 +18,15 @@ body{
 }
 .detail_left{
     display: inline-block;
-    width:428px;
-    height: 428px;
+    width:360px;
+    height: 420px;
     background: #fff;
     margin-left: 50px;
 }
 .detail_left img{
     display: inline-block;
-    width:428px;
-    height: 428px;
+    width:360px;
+    height: 420px;
 }
 .detail_right{
     display: inline-block;
@@ -145,14 +145,14 @@ body{
     margin-top: 92px;
 }
 .wx_creat{
-    width: 47%;
+    width: 100%;
     height: 40px;
     color: #fff;
     display: inline-block;
     line-height: 40px;
     text-align: center;
     background: #2CC21B;
-    margin-top: 82px;
+    margin-top: 72px;
     margin-right: 4px;
 }
 .long_pic{
@@ -330,8 +330,8 @@ body{
    right: 672px;
    top: 484px;
 }
-.big_big_box{
-    /*position: absolute;*/
+.log_pro{
+    bottom: 6px;
 }
 
 
