--- a/public/web/css/detail.css
+++ b/public/web/css/detail.css
@@ -21,39 +21,44 @@ body{
 /*商品详情*/
 #detail{
     width: 100%;
-    height:700px;
+    height:650px;
     margin-top: 20px;
 }
+
+.tab_nav{
+    height: 20px;
+    line_height:20px;
+}
+
 .detail_left{
     display: inline-block;
-    width:360px;
-    height: 420px;
+    width:396px;
+    height: 396px;
     background: #fff;
     margin-left: 50px;
 }
 .detail_left img{
     display: inline-block;
-    width:360px;
-    height: 420px;
+    width:396px;
+    height: 396px;
 }
 .detail_right{
     display: inline-block;
     width:632px ;
     height: 540px;
     float: right;
-    margin-right: 40px;
 }
 .short_title{
     font-size:18px;
     font-family:NotoSansHans-Regular;
-    color: #333;
+    color:rgba(51, 51, 51, 1);
 }
 .long_title{
     font-size:14px;
     margin-top: 10px;
     font-family:NotoSansHans-Regular;
     color:rgba(225,109,90,1);
-    line-height:22px;
+    line-height:20px;
 }
 .price_color_qh{
     font-size: 14px;
@@ -63,7 +68,7 @@ body{
 .price_num{
     font-size: 30px;
     color: #E1B05A ;
-    font-family:NotoSansHans-Regular;
+    font-family:Noto Sans S Chineser;
     margin-right: 50px;
 }
 .margin-left{
@@ -346,6 +351,9 @@ body{
 }
 .log_pro{
     bottom: 6px;
+}
+.auth-login{
+    color:rgba(225, 176, 90, 1);
 }
 
 
