--- a/public/web/css/pyt_land.css
+++ b/public/web/css/pyt_land.css
@@ -161,8 +161,11 @@
     height: 14px;
     display: inline-block;
     position: absolute;
-    top: 4px;
+    top: 10px;
     right: 10px;
+    color: #ddd;
+    font-size: 12px;
+    font-weight: 100;
 }
 .cancel{
     margin-right: 20px;
