--- a/public/web/css/account.css
+++ b/public/web/css/account.css
@@ -91,7 +91,7 @@
     width:100%;
     top:0px;
     left:auto;
-    z-index:3333333333 ;
+    z-index:3 ;
     background: rgba(0,0,0,.4);
     display: none;
 }
@@ -109,7 +109,7 @@
     top: 10px;
     right: 10px;
     display: inline-block;
-    z-index: 33333333333;
+    z-index: 3;
     color: #ddd;
 }
 .marginTOP200{
