--- a/public/css/web/user/dlstyle.css
+++ b/public/css/web/user/dlstyle.css
@@ -79,6 +79,7 @@ h3.title {
 form {
     max-width: 320px;
     margin: 20px auto;
+    font-size: 18px;
 }
 
 .user-name, .user-pass, .user-email, .user-phone, .verification {
@@ -262,8 +263,9 @@ input#code {
         position: absolute;
         margin-top: 79px;
         margin-left: 880px;
-        background: #f8f8f8;
+        background:rgba(255, 255, 255, 1);
         padding: 10px 20px;
+        border: 1px solid rgba(204, 204, 204, 1);
     }
 
     .login-box2 {
@@ -344,14 +346,18 @@ input#code {
 /*验证码输入框样式*/
 .login-box .am-form-field {
     border: none;
-    width: 255px;
+    width: 220px;
+    margin-right: 35px;
+    border: 1px solid rgba(220, 220, 220, 1);
 }
 
 /*验证码输入框按钮样式*/
 .login-box .am-input-group-label:last-child {
     border: 1px solid #ccc;
-    background:rgba(255,255,255,1);
+    background:rgba(107, 107, 107, .61);
   width: 165px;
+    color: rgba(51, 51, 51, 1);
+    font-size: 18px;
 
 }
 /*验证码输入框样式*/
@@ -378,9 +384,14 @@ input#code {
 form input{
     margin-left: 17px;
     width: 419px;
+    border: 1px solid rgba(220, 220, 220, 1);
 }
-
-
+/*验证样式*/
+.color_tishi{
+    color:rgba(225, 176, 90, 1);
+    margin-left: 34px;
+    display: none;
+}
 
 
 
