--- a/public/css/web/user/password.css
+++ b/public/css/web/user/password.css
@@ -60,11 +60,12 @@ body {
 .header-nav-first-span {
     position: absolute;
     left: 764px;
-    top: 72px;
+    top: 87px;
     display: inline;
     width: 140px;
     height: 31px;
     font-size: 32px;
+    font-family: MicrosoftYaHei;
     color: rgba(51, 51, 51, 1);
     line-height: 31px;
 }
@@ -72,7 +73,7 @@ body {
 .header-nav-sec-span {
     position: absolute;
     left: 1300px;
-    top: 81px;
+    top: 98px;
     display: inline;
     width: 180px;
     height: 19px;
@@ -91,19 +92,18 @@ form {
 }
 
 form input {
-    width: 419px;
+    width: 420px;
     height: 50px;
     background: rgba(255, 255, 255, 1);
     margin-bottom: 35px;
-    font-size: 24px;
+    font-size: 21px;
     font-family: MicrosoftYaHei;
-    color: rgba(204, 204, 204, 1);
+    border: 1px solid rgba(220, 220, 220, 1);
     padding-left: 17px;
 }
 
 ::placeholder {
     color: rgba(221, 221, 221, 1);
-    font-size: 24px;
 
 }
 
@@ -120,6 +120,7 @@ form .am-input-group-label:last-child {
     height: 50px;
     border: 1px solid #ccc;
     margin-top: -35px;
+    background-color: rgba(244, 244, 244, 1);
 }
 
 .am-btn-sm {
@@ -131,15 +132,26 @@ form .am-input-group-label:last-child {
     color: rgba(255, 255, 255, 1);
     margin-top: 87px;
 }
+.am-btn-sm:hover{
+    cursor: pointer;
+    color: #fff;
+}
 
 .div-input-inline {
     display: inline;
-
     padding-left: 5px;
     font-size:18px;
     font-family:MicrosoftYaHei;
-    color:rgba(51,51,51,1);
+    color:rgba(204, 204, 204, 1);
     line-height:31px;
+
+}
+#clock{
+    color: rgba(51, 51, 51, 1);
+}
+#new_id{
+    border: 1px solid  rgba(220, 220, 220, 1);
+    padding-left: 18px;
 }
 
 #relogin-clock {
@@ -151,4 +163,27 @@ form .am-input-group-label:last-child {
     line-height: 190px;
     margin-left: 86px;
 }
-
+.am-btns{
+    width: 420px;
+    height: 50px;
+    color: #fff;
+    font-size:24px ;
+    background-color: rgba(224, 171, 74, 1);
+    border: 1px solid rgba(224, 171, 74, 1);
+    outline:none ;
+    text-align: center;
+}
+.am-btns:hover{
+    cursor: pointer;
+}
+/*验证信息*/
+.username_ts,.username_tss{
+    color: rgba(224, 171, 74, 1);
+    position: absolute;
+    top: 30px;
+    left: 6px;
+    display: none;
+}
+.username_tss{
+    top: 114px;
+}
