--- a/public/web/css/pyt_land.css
+++ b/public/web/css/pyt_land.css
@@ -134,8 +134,8 @@
     font-size: 14px;
     margin-top: 50px;
 }
-.modal-title{
-    width: 100%;
+.modal__title{
+    width: 600px;
     margin-left: 0px;
     text-align: center;
     line-height: 40px;
@@ -153,10 +153,9 @@
     width: 80px;
     height: 30px;
     display: inline-block;
-    margin-top: 35px;
 }
 
-#cc{
+#cc,#ccc{
     width: 14px;
     height: 14px;
     display: inline-block;
@@ -179,4 +178,50 @@
     background:#E1B05A ;
     border: 1px solid  #E1B05A;
     color: #fff;
+}
+.modals{
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.4);
+    z-index: 2;
+    display: none;
+}
+.modal_body{
+    width: 600px;
+    height: 240px;
+
+}
+.modal_body_box{
+    height: 60px;
+}
+.pyt_boxMtk{
+    width: 600px;
+    height: 300px;
+    background-color: #fff;
+    margin-left: 30%;
+    margin-top: 200px;
+    position: relative;
+}
+.modal-title{
+    margin-left: 0px;
+    text-align: center;
+    line-height: 40px;
+    background-color:rgba(248, 248, 248, 1);
+}
+/*提示信息*/
+#xgzh,#xgzhs{
+    width: 160px;
+    height: 160px;
+    text-align: center;
+    line-height: 160px;
+    position: fixed;
+    top: 260px;
+    left: 45%;
+    z-index: 2;
+    color: #fff;
+    font-size: 14px;
+    background-color: rgba(0,0,0,.4);
+    display: none;
 }
