--- a/public/css/web/user/password.css
+++ b/public/css/web/user/password.css
@@ -187,3 +187,10 @@ form .am-input-group-label:last-child {
 .username_tss{
     top: 114px;
 }
+
+button,input{
+    outline: none;
+}
+input{
+
+}
