--- a/public/web/css/account.css
+++ b/public/web/css/account.css
@@ -42,6 +42,10 @@
     font-size:14px;
 
 }
+
+.sub_btns:hover{
+    cursor: pointer;
+}
 .change_password{
     margin-left: 30px;
     position: relative;
