--- a/public/web/css/com.css
+++ b/public/web/css/com.css
@@ -202,7 +202,7 @@ body{
     color:rgba(153,153,153,1);
     font-size:14px;
     margin-bottom: 10px;
-    margin-top: 8px;
+    margin-top: 6px;
 }
 
 .dropdown-menu_header{
@@ -471,4 +471,34 @@ button{
     box-shadow: none;
 }
 
-/*去除输入框背景色*/
+/*yejiao*/
+.pyt_footer{
+    border: none;
+    margin-left: 374px;
+}
+.pyt_footer_box{
+    /*position: absolute;*/
+    /*top: 3724px;*/
+    /*z-index: -4;*/
+    width: 100%;
+}
+.pyt_footer li{
+    margin-top: 22px;
+    margin-bottom: 4px;
+    font-size: 12px;
+    color: rgba(153, 153, 153, 1);
+    width: 140px;
+    border-right: 1px solid rgba(153, 153, 153, 1);
+    padding: 0px 4px 0px;
+    line-height: 10px;
+}
+.pyt_remark{
+    font-size: 12px;
+    color: rgba(153, 153, 153, 1);
+    margin-left: 410px;
+    padding-left: 0px;
+    width: 1100px;
+    padding-top: 18px;
+    padding-bottom: 20px;
+    border-top: 1px solid rgba(238, 238, 238, 1);
+}
